//
// Copyright 2017 Asylo authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto2";

package asylo;

// A null assertion is used by an identity with no cryptographic credentials. A
// null assertion holds the raw data blob provided by the user when generating
// the assertion. Note that this is not a cryptographic binding, as the blob is
// stored in its raw form and there is no associated identity binding. In
// non-trivial assertion types, the user-data should be cryptographically bound
// to the assertion.
message NullAssertion {
  // User data provided at the time of assertion generation.
  optional bytes user_data = 1;
}
